--- a/templates/reset-password.html
+++ b/templates/reset-password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <title>Reset Password</title>
@@ -56,4 +56,4 @@
     });
   </script>
 </body>
-</html>
+</html> -->
